// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generic textarea validator acceptable 1`] = `
{
  "data": "acceptable",
  "success": true,
}
`;

exports[`generic textarea validator non required empty 1`] = `
{
  "data": undefined,
  "success": true,
}
`;

exports[`generic textarea validator required empty 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "label": "description",
      "generic": [
        "textarea"
      ],
      "i18n": "errors.required"
    },
    "path": [],
    "message": "Invalid input"
  }
]],
  "success": false,
}
`;

exports[`generic textarea validator too big 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "label": "description",
      "count": 20,
      "generic": [
        "textarea"
      ],
      "i18n": "errors.too_big"
    },
    "path": [],
    "message": "Invalid input"
  }
]],
  "success": false,
}
`;

exports[`generic textarea validator too small 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "label": "description",
      "count": 5,
      "generic": [
        "textarea"
      ],
      "i18n": "errors.too_small"
    },
    "path": [],
    "message": "Invalid input"
  }
]],
  "success": false,
}
`;
